--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="../public/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="../public/apple-touch-icon.png" />
+    <meta name="description" content="Learn & code in Simply" />
+    <!-- facebook meta -->
+    <meta name="twitter:image" content="./android-chrome-192x192.png" />
+    <meta property="og:image" content="./android-chrome-192x192.png" />
+    
+    <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
